# ansible-bootstrap

./: .ansible-lint  .gitignore  .yamllint  README.md  ansible.cfg  hosts.ini  k8s_bootstrap.yaml  k8s_hosts.ini  local.yaml  local.yml  pyproject.toml  requirements.dev.txt  requirements.txt  requirements.yaml  tox.ini
.github/workflows/: lint.yaml  molecule-test.yaml
group_vars/: ansible_pull_managed.yaml  docker_hosts.yaml  headless_hosts.yaml  k8s.yaml  k8s_masters.yaml  log_collection.yaml
molecule/default/: Dockerfile.j2  converge.yml  molecule.yml  prepare.yml
molecule/libvirt/: molecule.yml
molecule/resources/: molecule.yml
molecule/resources/playbooks/: converge.yml
plugins/callback/: json_oneline.py  ndjson.py
roles/amd_firmware/meta/: main.yml
roles/amd_firmware/tasks/: main.yaml
roles/amdgpu/handlers/: main.yaml
roles/amdgpu/tasks/: main.yaml
roles/ansible_pull/files/: ansible_pull.service  ansible_pull.timer  ansible_pull_wrapper.sh
roles/ansible_pull/tasks/: main.yaml
roles/base/tasks/: main.yaml
roles/biostar_firmware/defaults/: main.yaml
roles/biostar_firmware/tasks/: main.yaml
roles/contrib/handlers/: main.yaml
roles/contrib/tasks/: main.yaml
roles/debug/tasks/: main.yaml
roles/debug/templates/: dumpall.j2
roles/flatpak/tasks/: main.yaml
roles/gui/tasks/: main.yaml
roles/hp_firmware/handlers/: main.yaml
roles/hp_firmware/tasks/: main.yaml
roles/laptop/tasks/: main.yaml
roles/non_free_firmware/tasks/: main.yaml
roles/san/meta/: main.yml
roles/san/tasks/: main.yaml
roles/stream_client/tasks/: main.yaml  (+1 more)
(+14 files in other folders)
